Added ImageGrid, Image, and added new getData method to WFS.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Using OpenLayers with Webpack</title>
+    <title>Image Grid</title>
     <style>
       html, body {
         margin: 0;
