--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>Image Grid</title>
     <style>
       html, body {
-        margin: 0;
-      }
-      #map {
-        width: 50%;
+        font-family: Arial, Helvetica, sans-serif;
+        background: #222;
+        color: white;
       }
     </style>
+
   </head>
   <body>
     <div id="root"></div>
